Completing endpoints
